--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@
 
 body {
     background-color:rgb(247, 205, 238);
-    display: flex;
-    justify-content:space-evenly;
+
 }
 h1{
     font-family: 'Roboto', sans-serif; 
@@ -15,4 +14,18 @@ h1{
 td{
     border: 1px solid black;
 
+}
+
+h1{
+    text-align: center;
+}
+header{
+    background-color: cadetblue; 
+    padding: 10px;
+} 
+
+footer{
+    text-align: center;
+    background-color: cadetblue;
+    padding: 10px;
 }
