--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,197 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700);
 
-body {
-    background-color:rgb(247, 205, 238);
-
-}
-h1{
-    font-family: 'Roboto', sans-serif; 
-    margin-left: 30px;
-    margin-top: 30px;
+* {
+  font-family: Open Sans;
+  /* margin-bottom: auto; */
 }
 
-td{
-    border: 1px solid black;
 
+/* header */
+header nav.navigator{
+    margin: 0;
+    background-color:  #895454;
+    height: 118px;
+  
 }
-
-h1{
+.firstlogo{
+    width: 190px;
+    margin-right: 372px;
+  
+    margin-bottom: -11px;
+}
+.productshop{
+    margin-top: 20px;
+}
+ul li {
+display: inline-block;
+list-style: none;
+}
+.pages{
+    color: blanchedalmond;
+    font-size: 21px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+.contant img{
+height: 100%;  
+width: 100%;
+}
+.our-product {
     text-align: center;
+    margin-top: 27px;
+    margin-bottom: 68px;
+    font-size: 23px;
 }
-header{
-    background-color: cadetblue; 
-    padding: 10px;
-} 
-
-footer{
+.locations{
     text-align: center;
-    background-color: cadetblue;
-    padding: 10px;
+    margin-bottom: 40px;
+  
 }
+
+/* form style */
+.form{
+
+    background-image: url('https://media.istockphoto.com/photos/human-hand-drawing-contact-us-on-blackboard-picture-id984585688?k=6&m=984585688&s=612x612&w=0&h=q6Jszkpz5ay1ub70I8wxUuL99_pJe-OyhFdbi7a_4Yw=');
+    background-size: cover;
+    background-position: center;
+    padding-top: 160px;
+    padding-bottom: 160px;
+
+    }
+    #contact {
+        text-align: center;
+    }
+
+    input{
+        height: 30px;
+        width: 800px;
+        border-radius: 9px;
+    }
+    input:nth-child(3) {
+        margin: 24px;
+    }
+
+    textarea{
+        width: 800px;
+        height: 55px; 
+        border-radius: 9px;
+        margin-bottom: 24px;
+
+    }
+
+    .product{
+        width: 33%;
+        float: right;
+    }
+
+ 
+    
+    .product img:hover{
+        filter: grayscale(100%);
+    }
+    /* footer */
+
+.footer-distributed{
+	background: #895454;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding: 55px 50px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+.footer-distributed .footer-left{
+	width: 40%;
+}
+
+
+
+img.logo {
+width: 307px;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+  font-weight:400;
+	text-decoration: none;
+	color:  inherit;
+}
+
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+  font-weight:400;
+	vertical-align: middle;
+
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+	color:  rgb(168, 218, 215);
+	text-decoration: none;;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "|";
+  font-weight:300;
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 20%;
+}
+
+ .footer-company-about{
+	line-height: 26px;
+	color:  #f7f8f8;
+	font-size: 15px;
+	font-weight: normal;
+    margin-top: 20px;
+ }
+
+
+
+
+
